--- a/Resources/public/src/theme.scss
+++ b/Resources/public/src/theme.scss
@@ -77,21 +77,19 @@
 
     }
 
-    input[type="file"] {
-        &[data-upload-mode="replace"]:hover {
-            background: rgba(255, 255, 255, 0.7);
-            &:before {
-                content: 'Replace File';
-                position: absolute;
-                top: 50%;
-                margin-top: -1em;
-                left: 0;
-                right: 0;
-                bottom: 0;
+    .file-input-wrapper.mode-replace:hover {
+        background: rgba(255, 255, 255, 0.7);
+        &:before {
+            content: 'Replace File';
+            position: absolute;
+            top: 50%;
+            margin-top: -1em;
+            left: 0;
+            right: 0;
+            bottom: 0;
 
-                color: #000;
-                text-align: center;
-            }
+            color: #000;
+            text-align: center;
         }
     }
 }
