fixed hidden file input widht and height

--- a/Resources/public/src/main.scss
+++ b/Resources/public/src/main.scss
@@ -25,12 +25,14 @@
         overflow: hidden;
 
         input[type="file"] {
+            display: block;
             position: absolute;
             z-index: 2;
             left: 0;
             top: 0;
             right: 0;
             bottom: 0;
+            height: 100%;
             opacity: 0;
             cursor: pointer;
         }
