--- a/Resources/views/Demo/index.html.twig
+++ b/Resources/views/Demo/index.html.twig
@@ -16,7 +16,7 @@
 
     {{ form_errors(form) }}
 
-    {% include 'LcnFileUploaderBundle:Default:uploadFormWidget.html.twig' with {
+    {% include widgetTheme with {
         'uploadUrl': uploadUrl,
         'tempUploadFolderName': tempUploadFolderName,
         'formSelector': '#lcn-file-uploader-demo'
