updated documentation; integrated LcnUseAssets support to ease integration

--- a/Resources/views/Demo/edit.html.twig
+++ b/Resources/views/Demo/edit.html.twig
@@ -23,6 +23,8 @@
     } %}
 
     {{ form_rest(form) }}
+
+    <input type="submit" value="save">
 </form>
 
 <h2><a href="{{ path('lcn_file_uploader_demo_create') }}">Create new temporary entity</a></h2>
