--- a/Resources/views/Demo/show.html.twig
+++ b/Resources/views/Demo/show.html.twig
@@ -3,8 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>LcnFileUploaderBundle Demo and Documentation</title>
-    <link rel="stylesheet" href="{{ asset('bundles/lcnfileuploader/dist/main.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/lcnfileuploader/dist/theme.css') }}">
 </head>
 <body>
 
@@ -19,7 +17,7 @@
 </ul>
 
 
-<a href="{{ path('lcn_file_uploader_demo_edit', { 'entityId': entityId }) }}">Edit files of temporary entity</a></h2>
+<a href="{{ path('lcn_file_uploader_demo_edit', { 'entityId': entityId }) }}">Edit files of temporary entity</a>
 
 </body>
 </html>
